# automaton-auditor

./: .env.example  .gitignore  =2.0  README.md  TODO.md  pyproject.toml  requirements.txt
audit/report_onpeer_generated/: audit_report.md
audit/report_onself_generated/: audit_report.md
audit/report_onself_generated-bkp/: audit_report.md
auditor/: __init__.py  __main__.py
docs/: ARCHITECTURE.md
rubric/: week2_rubric.json
src/: __init__.py  config.py  graph.py  report_serializer.py  state.py
src/nodes/: __init__.py  context.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_analyst.py  doc_tools.py  repo_investigator.py  repo_tools.py  vision_inspector.py  vision_tools.py
